[#34403883] Make creating and editing tandem resources happen inside our colorbox UI element

--- a/lib/generators/tandem/resource/templates/index.html.slim
+++ b/lib/generators/tandem/resource/templates/index.html.slim
@@ -1,6 +1,6 @@
 h2 <%= file_name.titleize.pluralize %>:
 
-p= link_to 'New <%= file_name.titleize%>', new_<%= file_name %>_path
+p= link_to 'New <%= file_name.titleize%>', new_<%= file_name %>_path, class: 'tandem_new_resource'
 
 table
   thead
@@ -18,5 +18,5 @@ table
       td= <%= singular_table_name %>.<%= attribute.name %>
 <% end -%>
       td= link_to 'Show', <%= singular_table_name %>
-      td= link_to 'Edit', edit_<%= singular_table_name %>_path(<%= singular_table_name %>)
+      td= link_to 'Edit', edit_<%= singular_table_name %>_path(<%= singular_table_name %>), class: 'tandem_edit_resource'
       td= link_to 'Delete', <%= singular_table_name %>, method: :delete, data: { confirm: 'Are you sure?' }
