Added images to tandem resource generator -If you want to add an image to a resource you must append --with_image to the end of the normal generator line -An image can also be added AND deleted from the edit form for a resource
TODO:
-Still needs some nice styling but its now usable
-Tests have yet to be written

--- a/lib/generators/tandem/resource/templates/show.html.slim
+++ b/lib/generators/tandem/resource/templates/show.html.slim
@@ -5,3 +5,9 @@ p
   strong <%= attribute.human_name %>: 
   = @<%= singular_table_name %>.<%= attribute.name %>
 <% end -%>
+
+<% if options.with_image -%>
+- if @<%= file_name %>.image?
+  p
+    = image_tag @<%= file_name %>.image.url
+<% end -%>
