--- a/lib/generators/tandem/resource/templates/_form.html.slim
+++ b/lib/generators/tandem/resource/templates/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @<%= singular_table_name %> do |f|
+= form_for @<%= singular_table_name %>, :html => { :multipart => true } do |f|
   - if @<%= singular_table_name %>.errors.any?
     #error_explanation
       h2 #{pluralize(@<%= singular_table_name %>.errors.count, "error")} prohibited this <%= singular_table_name %> from being saved:
@@ -12,6 +12,17 @@
     = f.label :<%= attribute.name %>
     br
     = f.<%= attribute.field_type %> :<%= attribute.name %>
+<% end -%>
+
+<% if options.with_image -%>
+  .field
+    = f.label "Image"
+    = f.file_field :image
+    br
+    - if @<%= file_name %>.image?
+      = image_tag @<%= file_name %>.image.url
+      = f.label "Delete Image"
+      = f.check_box :image_delete
 <% end -%>
 
   .actions
