--- a/lib/generators/tandem/resource/templates/_form.html.slim
+++ b/lib/generators/tandem/resource/templates/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @<%= singular_table_name %>, :html => { :multipart => true } do |f|
+= form_for @<%= singular_table_name %> do |f|
   - if @<%= singular_table_name %>.errors.any?
     #error_explanation
       h2 #{pluralize(@<%= singular_table_name %>.errors.count, "error")} prohibited this <%= singular_table_name %> from being saved:
